[workspace]
members = ["crates/core","crates/server","crates/viewer","crates/cli"]
resolver = "2"

[workspace.package]
edition = "2025-Aug-17"
license = "MIT"
authors = ["Edward J. Oakeley <edward@oakeley.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6"
hashbrown = "0.14"
ahash = "0.8"
smallvec = "1.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
memmap2 = "0.9"
hdf5 = "0.8"
hdf5-hl = "0.2"
ndarray = "0.15"
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread","macros","sync","fs","io-util"] }
tower-http = { version = "0.6", features = ["cors","trace"] }
reqwest = { version = "0.12", features = ["json","blocking"] }
eframe = "0.28"
egui = "0.28"
clap = { version = "4.4", features = ["derive"] }
crc32fast = "1.3"
rand = "0.8"
petgraph = "0.6"
