[package]
name = "core"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
hashbrown = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
xxhash-rust = { workspace = true }
log = { workspace = true }
indicatif = { workspace = true }
hdf5 = { workspace = true }
ndarray = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
rand = { workspace = true }
petgraph = { workspace = true }
