[package]
name = "server"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
core = { path = "../core" }
reqwest = { workspace = true }
clap = { workspace = true }
crc32fast = { workspace = true }
rand = { workspace = true }
